images are now responsive and properly sized

--- a/journal-covers.html
+++ b/journal-covers.html
@@ -48,7 +48,11 @@
             <p class="w-100 w-80-l fr-ns tl-l tc f5 lh-copy">You send us a copy of the paper and any ideas* you have for illustration.<span class="f7 db" style="line-height: 1.25 !important;"><br><br>*Written description, photos, hastily scribbled napkin sketches</span></p>
           </div>
         </div>
-        <div class="w-50-ns w-100 dtc-ns v-mid"><img src="images/cover-illustration/step1-01.png"></div>
+        <div class="w-50-ns w-100 dtc-ns v-mid">
+          <img src="images/cover-illustration/step1@1x.png"
+               srcset="images/cover-illustration/step1@1x.png 1x, images/cover-illustration/step1@2x.png 2x"
+               alt="Copy of paper and ideas for illustration.">
+        </div>
       </div>
       <div class="dt-ns w-100 mt4">
         <div class="w-50-ns dtc-ns v-mid">
@@ -61,7 +65,11 @@
             <p class="w-100 w-80-l fr-ns tl-l tc f5 lh-copy">We produce a number of sketches from your description, ideas for where to start. </p>
           </div>
         </div>
-        <div class="w-50-ns w-100 dtc-ns v-mid"><img src="images/cover-illustration/step2.png"></div>
+        <div class="w-50-ns w-100 dtc-ns v-mid">
+          <img src="images/cover-illustration/step2@1x.png"
+               srcset="images/cover-illustration/step2@1x.png 1x, images/cover-illustration/step2@2x.png 2x"
+               alt="Preliminary sketches.">
+        </div>
       </div>
       <div class="dt-ns w-100 mt4">
         <div class="w-50-ns dtc-ns v-mid">
@@ -74,7 +82,11 @@
             <p class="w-100 w-80-l fr-ns tl-l tc f5 lh-copy">We work with you to refine the illustration, going through multiple drafts.</p>
           </div>
         </div>
-        <div class="w-50-ns w-100 dtc-ns v-mid"><img src="images/cover-illustration/step3.png"></div>
+        <div class="w-50-ns w-100 dtc-ns v-mid">
+          <img src="images/cover-illustration/step3@1x.png"
+               srcset="images/cover-illustration/step3@1x.png 1x, images/cover-illustration/step3@2x.png 2x"
+               alt="Refining the illustration.">
+        </div>
       </div>
       <div class="dt-ns w-100 mt4">
         <div class="w-50-ns dtc-ns v-mid">
@@ -87,7 +99,11 @@
             <p class="w-100 w-80-l fr-ns tl-l tc f5 lh-copy">When you're satisfied, we produce a high-resolution render, ready for publication.</p>
           </div>
         </div>
-        <div class="w-50-ns w-100 dtc-ns v-mid"><img src="images/cover-illustration/step4.png"><p class="tc w-50 mr2 fr f7 gray mb0 permissions"><a href="https://www.nature.com/nphoton/volumes/10/issues/9" class="gray">Used with permission.</a></p></div>
+        <div class="w-50-ns w-100 dtc-ns v-mid">
+          <img src="images/cover-illustration/step4@1x.png"
+               srcset="images/cover-illustration/step4@1x.png 1x, images/cover-illustration/step4@2x.png 2x"
+               alt="Final render.">
+          <p class="tc w-50 mr2 fr f7 gray mb0 permissions"><a href="https://www.nature.com/nphoton/volumes/10/issues/9" class="gray">Used with permission.</a></p></div>
       </div>
     </div>
   </section>
