new index page design

--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
       <div class="dt-ns w-100">
         <div class="w-20-ns w-100 dtc-ns v-top">
           <div class="pa4-l pa3-m pl0-m pa0 mt1 fr-ns">
-            <img src="images/headshots/sean.jpg" class="br-100 w4-ns w3 dib ba b--moon-gray" alt="avatar">
+            <img src="images/headshots/sean.jpg" class="br-100 w4-ns w3 dib ba b--moon-gray pa1" alt="avatar">
           </div>
         </div>
         <div class="w-80-ns w-100 dtc-ns v-top">
