--- a/journal-covers.html
+++ b/journal-covers.html
@@ -115,7 +115,7 @@
   </section>
   <footer>
     <div class="bt b--moon-gray center">
-      <p class="tc f7 gray mb2">© 2018 Inform Studio</p>
+      <p class="tc f7 gray mt2 mb2">© 2018 Inform Studio</p>
     </div>
   </footer>
 </body>
