small layout adjustments

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         font-size: 13px;
       }
       .hero-2 {
-        left: -4.5%;
+        left: -4.5% !important;
         width: 660px !important;
       }
       .fadein img {
@@ -140,7 +140,7 @@
       }
       .hero-2 {
         position: absolute;
-        left: -4.5%;
+        left: -80px;
         width: 600px;
         top: -100%;
         height: 250%;
@@ -179,7 +179,7 @@
       </div>
       <!-- <div class="hero bg-lighter-gray shadow-3 ba b--moon-gray dn db-l o-90"></div> -->
       <div class="hero-2 bg-lightest-gray shadow-3 ba b--moon-gray dn db-ns"></div>
-      <div class="w-100 pb4-ns pb2 pl4 pl2-l pr4-ns relative">
+      <div class="w-100 pb4-ns pb2 pl4-ns pl3 pl2-l pr4-ns pr3 relative">
         <div class="mw7-ns mw6 w-100 relative pr4-l pr6-m">
           <p class="f1-l f2-m f3 pt4-ns pt2 mb3 dark-gray relative"><b class="inform">Inform</b> is a scientific illustration and animation studio.</p>
           <!-- <p class="f1-l f2-m f3 pt4-ns pt2 mb3 dark-gray relative">Accurate and informative scientific illustration</p> -->
