--- a/index.html
+++ b/index.html
@@ -7,35 +7,21 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="tachyons.min.css">
   <style>
-      .bg-lightest-gray {
+    .bg-lightest-gray {
         background-color: #fafafa;
-      }
-      .bg-lightest-gray-large {
-        background-color: rgba(250,250,250, 0.6);
-      }
-      .bg-lighter-gray {
+    }
+    .bg-lighter-gray {
         background-color: #fcfcfc;
-      }
-      .b--lighter-gray {
-        border-color: #fcfcfc !important;
-      }
+    }
     .copyright {
       margin-bottom: 1.25rem !important;
     }
     .gradient {
       background-image: linear-gradient(180deg, #fafafa 0%, #cccccc 100%);
     }
-    @media screen and (min-width: 30em) and (max-width: 60em) {
-      .f-inform-m {
-        font-size: 4rem;
-      }
-    }
     @media screen and (min-width: 60em) {
       .inform {
         font-size: 48px !important;
-      }
-      .bg-lightest-gray-large {
-        background-color: rgba(250,250,250, 0.0);
       }
       .fadein {
         opacity: 1.0;
@@ -43,10 +29,7 @@
       .grid-l {
         max-width: 76rem;
       }
-      html {
-        font-size: 13px;
-      }
-      .hero-2 {
+      .hero {
         left: -4.5% !important;
         width: 660px !important;
       }
@@ -85,10 +68,10 @@
           -webkit-animation-delay: -8s;
       }
     }
-    @media screen and (min-width: 1030px) {
-      /* .hero-2 {
-        left: -8.5% !important;
-      } */
+    @media screen and (min-width: 30em) and (max-width: 60em) {
+      .f-inform-m {
+        font-size: 4rem;
+      }
     }
     @media screen and (min-width: 30em) {
       html {
@@ -131,15 +114,6 @@
       }
       .hero {
         position: absolute;
-        left: -4.5%;
-        top: -10%;
-        height: 200%;
-        width: 65%;
-        transform: rotate(-15deg);
-        backface-visibility: hidden;
-      }
-      .hero-2 {
-        position: absolute;
         left: -80px;
         width: 600px;
         top: -100%;
@@ -147,12 +121,6 @@
         transform: rotate(25deg);
         backface-visibility: hidden;
       }
-    }
-    .fadein {
-      position:absolute;
-      top:0px;
-      left:50%;
-      margin:auto;
     }
   </style>
 </head>
@@ -177,37 +145,18 @@
         <img src="images/index/hero-image-2.jpg" id="f2">
         <img src="images/index/hero-image-3.jpg" id="f3">
       </div>
-      <!-- <div class="hero bg-lighter-gray shadow-3 ba b--moon-gray dn db-l o-90"></div> -->
-      <div class="hero-2 bg-lightest-gray shadow-3 ba b--moon-gray dn db-ns"></div>
+      <div class="hero bg-lightest-gray shadow-3 ba b--moon-gray dn db-ns"></div>
       <div class="w-100 pb4-ns pb2 pl4-ns pl3 pl2-l pr4-ns pr3 relative">
         <div class="mw7-ns mw6 w-100 relative pr4-l pr6-m">
           <p class="f1-l f2-m f3 pt4-ns pt2 mb3 dark-gray relative"><b class="inform">Inform</b> is a scientific illustration and animation studio.</p>
-          <!-- <p class="f1-l f2-m f3 pt4-ns pt2 mb3 dark-gray relative">Accurate and informative scientific illustration</p> -->
-          <!-- <h1 class="tc-ns f3-ns f4">The hard part is done—its time to share your work!</h1> -->
-          <!-- <p class="f3-l f4-m f5 mw6 mt5-ns mt4 lh-copy"><b style="font-size: 24px !important;">Inform</b> is a scientific illustration and animation studio. We translate complex scientific phenomena into clear visual form.</p> -->
           <p class="f3-l f4-m f5 mw7 pr6-ns mr3 mt5-ns mt4 lh-copy">From technical illustrations to detailed animations, we translate complex scientific phenomena into clear visual form.</p>
         </div>
       </div>
     </section>
-    <!-- <div class="center mw6-l mw5-m pr5-l pl5-l pa0-m pr5 pl5">
-      <img src="images/logos/logo-01.png" class="w-100 dn db-ns">
-      <img src="images/logos/logo-mobile.png" class="w-100 dn-ns">
-    </div>
-    <p class="tc f2-l f3-m f5 mw9-l mw7 mt0 center pl2-ns pr2-ns dark-gray pl3 pr3 mb4-ns mb3">Scientific illustration and animation studio</p> -->
-    <!-- <div class="w-100 mw7 tc center bb b--gray bt">
-      <div class="w-100 dt mw7 center" style="font-size: 12px !important;">
-        <a class="f6 link dim ph3-ns ph2 pv3 mb2 black-80 br b--moon-gray v-mid w-20 dtc" href="about.html"><p class="f3-ns f5 ma0">About</p></a>
-        <a class="f6 link dim ph3-ns ph2 pv2 mb2 br b--moon-gray v-mid w-20 dtc" href="mailto:sean@inform.studio"><img class="w3-ns w2 v-mid o-80" src="images/icons/mail-square.svg"></a>
-        <a class="f6 link dim ph3-ns ph2 pv2-ns pv1 mb2 br b--moon-gray v-mid w-20 dtc" href="https://www.instagram.com/inform_science_studio/"><img class="w2-ns w1 v-mid o-80" src="images/icons/instagram_simple_icon.svg"></a>
-        <a class="f6 link dim ph3-ns ph2 pv2-ns pv1 mb2 v-mid w-20 dtc" href="https://twitter.com/inform_studio"><img class="w2-ns w1 v-mid o-80" src="images/icons/twitter.svg"></a>
-      </div>
-    </div> -->
     <div class="cf grid-l mw8 center pt4-l pt3 pl0-ns pr0-ns pl2 pr2 relative">
       <div class="w-100 expand">
-      <!-- <div class="absolute h-25 bg-lighter-gray w-100 center top-0 bt bb b--moon-gray bg-light-gray"></div> -->
       <div class="w-third-l w-50-ns w-100 mw-image center fl-ns pa3-ns mb3 mb0-ns">
         <a href="journal-covers.html" class="dark-gray no-underline">
-          <!-- br3-ns shadow-4 -->
           <div class="relative ba b--gray grow pointer image-container  dt db-ns w-100 ">
             <picture>
               <source media="(max-width: 480px)"
@@ -298,7 +247,6 @@
     </div>
     </div>
     <section class="pt1 mt5 w-100 grid-l center pb5">
-      <!-- mt6 for expanded grid -->
       <p class="tc mt5-ns mt4 mb0 f1-ns f3 dark-gray">Interested in working together?</p>
       <p class="f3-ns f5 tc pb4"><a class="b no-underline dark-gray bb" href="mailto:sean@inform.studio">Get in touch<span><img src="images/icons/mail.svg" class="w2 ml1"></span></a>  and we'll make it happen.</p>
     </section>
@@ -308,23 +256,4 @@
       <p class="tc f7 gray mt2 mb0">© 2018 Inform Studio</p>
     </div>
   </div>
-
-  <script>
-  // var slideIndex = 0;
-  //   carousel();
-  //
-  //   function carousel() {
-  //       var i;
-  //       var x = document.getElementsByClassName("mySlides");
-  //       for (i = 0; i < x.length; i++) {
-  //         x[i].style.display = "none";
-  //         x[i].style.opacity = 0.0;
-  //       }
-  //       slideIndex++;
-  //       if (slideIndex > x.length) {slideIndex = 1}
-  //       x[slideIndex-1].style.display = "block";
-  //       x[slideIndex-1].style.opacity = 1.0;
-  //       setTimeout(carousel, 4000); // Change image every 2 seconds
-  //   }
-  </script>
 </body>
