--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="tachyons.min.css">
   <style>
+    .b--lighter-gray {
+      border-color: #fcfcfc !important;
+    }
     .bg-lightest-gray {
         background-color: #fafafa;
     }
@@ -111,16 +114,26 @@
         -ms-transform:scale(1.03);
         transform:scale(1.03);
       }
-      }
-      .hero {
-        position: absolute;
-        left: -80px;
-        width: 600px;
-        top: -100%;
-        height: 250%;
-        transform: rotate(25deg);
-        backface-visibility: hidden;
-      }
+    }
+    .hero {
+      position: absolute;
+      left: -80px;
+      width: 600px;
+      top: -100%;
+      height: 250%;
+      transform: rotate(25deg);
+      backface-visibility: hidden;
+    }
+    .cover-left {
+      background-image: linear-gradient(to right, white, transparent 100%);
+    }
+    .cover-right {
+      background: linear-gradient(to left, white, transparent 100%);
+    }
+    .shadow {
+       -moz-box-shadow:    inset 0 0 40px 20px #ffffff;
+       -webkit-box-shadow: inset 0 0 40px 20px #ffffff;
+       box-shadow:         inset 0 0 40px 20px #ffffff;
     }
   </style>
 </head>
@@ -139,13 +152,13 @@
     </div>
   </header>
   <div class="center pl4-l pr4-l">
-    <section class="w-100 mt0 pb4-ns pb2 pl4-l grid-l center bg-lightest-gray ba-ns bb b--moon-gray overflow-hidden relative">
+    <section class="w-100 mt0 pb4-ns pb2 pl4-l grid-l center bg-lightest-gray bt-ns bb b--moon-gray overflow-hidden relative mb3" style="z-index: 100;">
       <div class="w-50-l tr tl-l w-100 right-0 h-100 bg-gray absolute fadein dn db-ns">
         <img src="images/index/hero-image-1.jpg" id="f1">
         <img src="images/index/hero-image-2.jpg" id="f2">
         <img src="images/index/hero-image-3.jpg" id="f3">
       </div>
-      <div class="hero bg-lightest-gray shadow-3 ba b--moon-gray dn db-ns"></div>
+      <div class="hero bg-white shadow-3 ba b--moon-gray dn db-ns"></div>
       <div class="w-100 pb4-ns pb2 pl4-ns pl3 pl2-l pr4-ns pr3 relative">
         <div class="mw7-ns mw6 w-100 relative pr4-l pr6-m">
           <p class="f1-l f2-m f3 pt4-ns pt2 mb3 dark-gray relative"><b class="inform">Inform</b> is a scientific illustration and animation studio.</p>
@@ -153,11 +166,13 @@
         </div>
       </div>
     </section>
-    <div class="cf grid-l mw8 center pt4-l pt3 pl0-ns pr0-ns pl2 pr2 relative">
-      <div class="w-100 expand">
+    <div class="cf center mw9-l mw8 pl0-ns pr0-ns pl2 pr2 pb4-l pb3 relative shadow bg-lighter-gray expand">
+      <div class="absolute w-20 h-100 left-0 cover-left z-99"></div>
+      <div class="absolute w-20 h-100 right-0 cover-right z-99"></div>
+      <div class="grid-l w-100 center pt4-l pt3-m pt0">
       <div class="w-third-l w-50-ns w-100 mw-image center fl-ns pa3-ns mb3 mb0-ns">
         <a href="journal-covers.html" class="dark-gray no-underline">
-          <div class="relative ba b--gray grow pointer image-container  dt db-ns w-100 ">
+          <div class="relative ba b--gray grow pointer image-container  dt db-ns w-100 br4-ns shadow-4-ns">
             <picture>
               <source media="(max-width: 480px)"
                       srcset="images/index/nphotonics-mobile@1x.jpg 1x, images/index/nphotonics-mobile@2x.jpg 2x">
@@ -172,7 +187,7 @@
       </div>
       <div class="w-third-l w-50-ns w-100 mw-image center fl-ns pa3-ns mb3 mb0-ns">
         <a href="technical-graphics.html" class="dark-gray no-underline">
-          <div class="relative ba b--gray grow pointer image-container  dt db-ns w-100 ">
+          <div class="relative ba b--gray grow pointer image-container  dt db-ns w-100 br4-ns shadow-4-ns">
             <picture>
               <source media="(max-width: 480px)"
                       srcset="images/index/prospect_diagram-mobile@1x.jpg 1x, images/index/prospect_diagram-mobile@2x.jpg 2x">
@@ -187,7 +202,7 @@
       </div>
       <div class="w-third-l w-50-ns w-100 mw-image center fl-ns pa3-ns mb3 mb0-ns">
         <a href="scientific-illustration.html" class="dark-gray no-underline">
-          <div class="relative ba b--gray grow pointer image-container  dt db-ns w-100 ">
+          <div class="relative ba b--gray grow pointer image-container  dt db-ns w-100 br4-ns shadow-4-ns">
             <picture>
               <source media="(max-width: 480px)"
                       srcset="images/index/parafermions-mobile@1x.jpg 1x, images/index/parafermions-mobile@2x.jpg 2x">
@@ -202,7 +217,7 @@
       </div>
       <div class="w-third-l w-50-ns w-100 mw-image center fl-ns pa3-ns mb3 mb0-ns">
         <a href="explanatory-animation.html" class="dark-gray no-underline">
-          <div class="relative ba b--gray grow pointer image-container  dt db-ns w-100 ">
+          <div class="relative ba b--gray grow pointer image-container  dt db-ns w-100 br4-ns shadow-4-ns">
             <picture>
               <source media="(max-width: 480px)"
                       srcset="images/index/moebius-mobile@1x.jpg 1x, images/index/moebius-mobile@2x.jpg 2x">
@@ -216,7 +231,7 @@
       </div>
       <div class="w-third-l w-50-ns w-100 mw-image center fl-ns pa3-ns mb3 mb0-ns">
         <a href="data-visualization.html" class="dark-gray no-underline">
-          <div class="relative ba b--gray grow pointer image-container  dt db-ns w-100 ">
+          <div class="relative ba b--gray grow pointer image-container  dt db-ns w-100 br4-ns shadow-4-ns">
             <picture>
               <source media="(max-width: 480px)"
                       srcset="images/index/dots-mobile@1x.jpg 1x, images/index/dots-mobile@2x.jpg 2x">
@@ -231,7 +246,7 @@
       </div>
       <div class="w-third-l w-50-ns w-100 mw-image center fl-ns pa3-ns mb3 mb0-ns">
         <a href="interaction-development.html" class="dark-gray no-underline">
-          <div class="relative ba b--gray grow pointer image-container  dt db-ns w-100 ">
+          <div class="relative ba b--gray grow pointer image-container  dt db-ns w-100 br4-ns shadow-4-ns">
             <picture>
               <source media="(max-width: 480px)"
                       srcset="images/index/interaction-mobile@1x.jpg 1x, images/index/interaction-mobile@2x.jpg 2x">
@@ -247,7 +262,7 @@
     </div>
     </div>
     <section class="pt1 mt5 w-100 grid-l center pb5">
-      <p class="tc mt5-ns mt4 mb0 f1-ns f3 dark-gray">Interested in working together?</p>
+      <p class="tc mt4-ns mt2 mb0 f1-ns f3 dark-gray">Interested in working together?</p>
       <p class="f3-ns f5 tc pb4"><a class="b no-underline dark-gray bb" href="mailto:sean@inform.studio">Get in touch<span><img src="images/icons/mail.svg" class="w2 ml1"></span></a>  and we'll make it happen.</p>
     </section>
   </div>
