--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
   </style>
 </head>
 <body class="sans-serif w-100 center black-70 f6 bg-white pl2-ns pr2-ns relative">
-  <header class="center grid-l w-100 mt4-l mt3-m mt1 pb0 overflow-auto b--moon-gray">
+  <header class="center grid-l w-100 mt4-l mt3-m mt1 pb0 overflow-auto">
     <div class="grid-l center">
     <div class="fl-ns center mw5-ns pa4-l pt0-l pr5-m absolute-ns mw4"><img src="images/logos/logo-mobile.svg" class="w-100 shrink"></div>
     <div class="w-100 mw6 tc center fr bt bb bn-ns b--dark-gray">
@@ -158,7 +158,7 @@
     </div>
   </header>
   <div class="center pl4-l pr4-l">
-    <section class="w-100 mt0 pb4-ns pb2 pl4-l grid-l center bg-lightest-gray bt-ns bb b--moon-gray overflow-hidden relative mb3" style="z-index: 100;">
+    <section class="w-100 mt0 pb4-ns pb2 pl4-l grid-l center bg-white bt-ns bb-ns b--moon-gray overflow-hidden relative mb3-ns mb0" style="z-index: 100;">
       <div class="w-50-l tr tl-l w-100 right-0 h-100 bg-gray absolute fadein dn db-ns">
         <img src="images/index/hero-image-1.jpg" id="f1">
         <img src="images/index/hero-image-2.jpg" id="f2">
@@ -267,9 +267,9 @@
       </div>
     </div>
     </div>
-    <section class="pt1 mt5 w-100 grid-l center pb5">
-      <p class="tc mt4-ns mt2 mb0 f1-ns f3 dark-gray">Interested in working together?</p>
-      <p class="f3-ns f5 tc pb4"><a class="b no-underline dark-gray bb" href="mailto:sean@inform.studio">Get in touch<span><img src="images/icons/mail.svg" class="w2 ml1"></span></a>  and we'll make it happen.</p>
+    <section class="pt1 mt5-ns mt3 w-100 grid-l center pb5-ns pb3">
+      <p class="tc mt4-ns mt2 mb0 f1-l f2-m f3 dark-gray">Interested in working together?</p>
+      <p class="f3-l f4-m f5 tc pb4"><a class="b no-underline dark-gray bb" href="mailto:sean@inform.studio">Get in touch<span><img src="images/icons/mail.svg" class="w2 ml1"></span></a>  and we'll make it happen.</p>
     </section>
   </div>
   <div class="center b--moon-gray pb2 bt">
